# xc-demo

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
tests/: test_silly.py
xc_demo/: silly.py
