[tool.poetry]
name = "xc-demo"
version = "0.1.0"
description = ""
authors = ["Nicholas Bruce <nicholas@nicholasbruce.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "xc_demo"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"

# configuration for testing/linting
[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true

[tool.black]
target-version = ["py311"]
preview="True"

[tool.isort]
profile="black"